--- a/_columns/The_Big_Picture/2024-12-23.md
+++ b/_columns/The_Big_Picture/2024-12-23.md
@@ -60,7 +60,7 @@ The S&P 500 also showed a bullish intraday bounce.
 Down nearly 0.5% at around 10:15 a.m. ET, the large-cap benchmark snapped back like a bull after taking a power nap. The S&P 500 rose 0.7% to 5,974, coming within 5% of its all-time peak of 6,099.97.
 
 
-The Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) ETF edged up 0.1%. Having fallen 7.7% from its Nov. 29 peak, the exchange traded fund needs to rally a significant amount just to test upside resistance at its [cresting 50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/).
+The Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) ETF edged up 0.1%. Having fallen 7.7% from its Nov. 29 peak, the exchange traded fund needs to rally a significant amount just to test resistance at its [cresting 50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/).
 
 
 A decent array of industries helped the cause. Among IBD's 197 industry groups, fabless semiconductor, automaker, chip equipment, internet content, airline, home furnishings retail, solar, managed care and ship transport stocks all posted price-weighted gains of 1% or more.
@@ -132,16 +132,16 @@ One, small caps sour further. Further drops by smaller issues may indicate that 
 Two, market breadth worsens. Keep an eye on the advance-decline lines for the NYSE and the Nasdaq. If the major indexes power to new highs but the A-D lines keep heading south, this divergence usually sets up a serious correction in the future. Meanwhile, [MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*1r3utpm*_gcl_au*MTM0OTMxNTg3OS4xNzMzODU4NDg2LjY0NTg3ODExLjE3MzM5NDk2ODAuMTczMzk0OTY3OQ..*_ga*MjA3NTg4MzU4OC4xNzM0MDY0MTIz*_ga_K2H7B9JRSS*MTczNDA5OTMyOS4zLjEuMTczNDA5OTMzNi41My4wLjA.) shows that the 10-day average of new lows has now doubled the 10-day average of new highs. Go to "NYEXG" to see a graph of both new highs and new lows.
 
 
-Brent Schutte, chief investment officer at Northwestern Mutual Wealth Management, noted in a Monday comment that "as expectations about the number of cuts in 2025 recently began to come into question, the market returned to favoring a small subset of large technology names that it believes will grow regardless of the economy. The upshot is that every trading day from Dec. 2 through Dec. 19, more individual stocks saw their prices decline than those that rose in price."
+Brent Schutte, chief investment officer at Northwestern Mutual Wealth Management, noted in a Monday comment that "as expectations about the number of (interest rate) cuts in 2025 recently began to come into question, the market returned to favoring a small subset of large technology names that it believes will grow regardless of the economy. The upshot is that every trading day from Dec. 2 through Dec. 19, more individual stocks saw their prices decline than those that rose in price."
 
 
 "For further context, this is the longest stretch of negative breadth in data going back to 1990," Schutte added. "Despite this, the S&P 500 posted positive performance from Dec. 2 through Dec. 17. It wasn't until the sell-off sparked by the Fed's latest dot plot that the index turned negative."
 
 
-The 500 edged up a mere 18 points over that Dec. 2 to 17 time frame, yet it was still a gain.
+The S&P 500 edged up a mere 18 points over that Dec. 2 to 17 time frame, yet it was still a gain.
 
 
-For further commentary on the Fed's recently released Summary of Economic Projections, nicknamed the "dot plot," please check out [Jed Graham's story on Wednesday's Fed announcement](https://www.investors.com/news/economy/federal-reserve-meeting-december-rate-cut-jerome-powell-trump-sp-500/). Also, go to the General Market Indicators PDF link at the bottom of each day's Big Picture to analyze the advance-decline lines of both the Nasdaq and the S&P 500.
+For more on the Fed's recently released Summary of Economic Projections, nicknamed the "dot plot," please check out [IBD's story on Wednesday's Fed announcement](https://www.investors.com/news/economy/federal-reserve-meeting-december-rate-cut-jerome-powell-trump-sp-500/). Also, go to the General Market Indicators link at the bottom of each day's Big Picture to analyze the advance-decline lines of both the Nasdaq and the S&P 500.
 
 
 Now, even leading stocks can go into corrections and switch into basing modes. That's normal. **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)) is clearly working on a [new base](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-growth-stocks-positive-elements-of-a-base/). **Spotify** ([SPOT](https://research.investors.com/quote.aspx?symbol=SPOT)) has undercut its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) and might test buyers at its rising 50-day line.
