--- a/_columns/The_Big_Picture/zh-cn/2025-01-07.md
+++ b/_columns/The_Big_Picture/zh-cn/2025-01-07.md
@@ -28,7 +28,7 @@ Record Nasdaq Volume In Stock Market
 After briefly crossing the 20,000 level Monday, the Nasdaq composite registered another [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/), falling 1.9% in higher volume. The index fell through its 21-day exponential moving average although it is still holding above its 50-day moving average. Decliners beat advancers on the Nasdaq by just over 2-to-1.
 
 
-Nasdaq volume was the largest on record, according to Dow Jones Market Data, and a sign that institutions sold shares heavily. Dollar-weighted volume, however, was lower and on that basis the Nasdaq would have avoided a distribution days. Much of the heavy volume came from stocks trading under 10 a share.
+Nasdaq volume was the largest on record, according to Dow Jones Market Data, and a sign that institutions sold shares heavily. Dollar-weighted volume, however, was lower and on that basis the Nasdaq would have avoided a distribution day. Much of the heavy volume came from stocks trading under 10 a share.
 
 
 ![](https://www.investors.com/wp-content/uploads/2025/01/MP010725.jpg)
