--- a/_columns/The_Big_Picture/zh-cn/2025-01-10.md
+++ b/_columns/The_Big_Picture/zh-cn/2025-01-10.md
@@ -90,5 +90,8 @@ However, it was the drug stores group that took top honors after **Walgreen Boot
 [This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
+[Market Suffers Damaging Losses; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-buy-signals-nvidia-meta-tesla/)
+
+
 
 
