--- a/_columns/Stock_Of_the_Day/2025-01-17.md
+++ b/_columns/Stock_Of_the_Day/2025-01-17.md
@@ -30,7 +30,7 @@ ServiceNow Stock Performance
 ----------------------------
 
 
-On the [stock market today](https://www.investors.com/stock-market-today/?), ServiceNow stock rose 1.4% to close at 1,071.48.
+On the [stock market today](http://www.investors.com/stock-market-today/?), ServiceNow stock rose 1.4% to close at 1,071.48.
 
 
 Like big-cap software peer and rival **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)), ServiceNow stock hit an all-time high in December. Shares in ServiceNow hit 1,157.90 on Dec. 11, then retreated late in 2024.
